--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     image: postgres:9.6-alpine
     ports:
       - "5432:5432"
-#    networks:
-#      - app-network
+    networks:
+      - app-network
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
@@ -29,9 +29,9 @@ services:
     image: redis:alpine
     ports:
       - "6379:6379"
-#    networks:
-#      - app-network
-#
-#networks:
-#  app-network:
-#    driver: bridge
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
